# ilXyr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.claude/agents/: prior-art-scholar.md
.github/workflows/: ci.yml  pages.yml
crates/ilxyr-cli/: Cargo.toml
crates/ilxyr-cli/src/: main.rs
crates/ilxyr-core/: Cargo.toml
docs/: ARCHITECTURE.md  PROGRAM.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  V1_1_REVIEW.md  V1_REVIEW.md  index.html  styles.css
docs/decisions/: 0001-portable-core-local-ledger.md  0002-two-families-one-method-layer.md  0003-autonomous-operation.md  0004-decidable-core-scored-believers.md
docs/experiments/: EXP-001.md  EXP-002.md  EXP-003.md  EXP-004.md  EXP-005.md  exp-001.html  exp-002-evidence.json  exp-002.html  exp-003-evidence.json  exp-003.html  exp-004-evidence.json  exp-004.html  exp-005.html  solomon-successor-v2-public-evidence.json
docs/prior-art/: exp-004-replay-tangent-projection.md
schemas/: calibration-record.schema.json  certificate.schema.json  contribution.schema.json  epoch-budget.schema.json  evidence.schema.json  experiment.schema.json  forecast.schema.json  funding.schema.json  replication-contract.schema.json  retro-registration.schema.json  sandbox-run.schema.json  sandbox-spec.schema.json  shared-task.schema.json
scripts/: harness-solomon-successor-v2.mjs  harness-zero-q22r-multiseed.mjs  harness-zero-q22r.mjs  harness-zero-q23.mjs  harness-zero-q24.mjs  harness-zero-q25.mjs  harness-zero-q26.mjs  harness-zero-q26r.mjs  validate-json-schemas.mjs
(+75 files in other folders)
