[package]
name = "ilxyr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ilxyr"
path = "src/main.rs"

[dependencies]
ilxyr-core = { path = "../ilxyr-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
